2012-11-01 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCommandMainCheckSpecial): Add alias
	'fetch' for cygport source download compatibility.

2012-10-31 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh
	(top level): Improve all <cd $dir> commands to read <cd "$dir">.
	(CygbuildCygcheckLibraryDepMain): Adjust comments.
	(CygbuildPreRemoveWrite): Adjust message.
	(CygbuildPatchApplyQuiltMaybe): Add color support. Disable in Emacs
	M-x shell.

2012-10-25 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildBootVariablesGlobalMain): Add
	.sgignores to CYGBUILD_DIFF_OPTIONS.
	(CygbuildIsCmakePackage): New.
	(CygbuildCmdBuildStdMakefile): Add CMake support.
	(CygbuildCmdConfMain): Add CMake support.
	(CygbuildConfCmakeMain): New.

2012-10-24 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdPkgDevelStandardAbiVersion): New.
	(CygbuildCmdPkgDevelStandardMain): Take another look (not ready).

2012-10-23 Tue  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildInstallExtraBinFiles): Adjust message.
	(CygbuildCommandMain): In shadow cmmand, call CygbuildCmdMkdirs().

2012-10-22 Mon  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdPrepMain): Use AND to connect
	cd commadn to CygbuildPatchApplyMaybe.
	(CygbuildCheckRunDir): No checking in CygbuildIsGbsCompat mode.
	(CygbuildCmdGPGVerifyMain): Adjust message.
	(CygbuildPatchApplyRun): Correct --binary option to use variable patchopt.
	Enable check CygbuildFileIsCRLF.
	(CygbuildPatchApplyMaybe): Retry with --binary option.

2012-10-20 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdInstallFinishMessage): Don't
	display message in GBS mode.

2012-10-13 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/data/python-2.6.8.lst: New.

2012-10-11 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildInstallExtraDirsFile): remove
	sub shell call and use $retval.